tests/neg/override-scala2-macro/B_2.scala
class B extends A {
  override inline def foo: Unit = ??? // error
}
